Store CI test results

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,8 @@ jobs:
       - run:
           name: Running Tests
           command: bundle exec rake test:ci
+      - store_test_results:
+          path: test/reports
 
 workflows:
   testing:
